# mhost

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LAUNCH_POSTS.md  LICENSE  README.md  SECURITY.md  docs.html  dump.json  index.html  mhost.toml  playground.html  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  labels.yml  release.yml  stale.yml
crates/mhost-ai/: Cargo.toml
crates/mhost-ai/src/: ask.rs  claude.rs  config.rs  config_gen.rs  context.rs  diagnose.rs  explain.rs  lib.rs  log_query.rs  openai.rs  optimize.rs  postmortem.rs  prompts.rs  provider.rs  watch.rs
crates/mhost-api/: Cargo.toml
crates/mhost-api/src/: auth.rs  envelope.rs  event_bus.rs  lib.rs  rate_limit.rs  roles.rs  server.rs  tokens.rs  webhook_dispatch.rs  websocket.rs
crates/mhost-api/src/routes/: health.rs  logs.rs  metrics.rs  mod.rs  processes.rs  system.rs  tokens.rs  webhooks.rs
crates/mhost-bot/: Cargo.toml
crates/mhost-bot/src/: audit.rs  config.rs  lib.rs  rate_limit.rs  telegram.rs
crates/mhost-cli/: Cargo.toml  mhost.toml
crates/mhost-cli/src/: cli.rs  daemon_launcher.rs  embedded.rs  main.rs  output.rs  resolve.rs
crates/mhost-cli/src/commands/: agent.rs  ai.rs  api.rs  audit.rs  bench.rs  bot.rs  brain.rs  canary.rs  certs.rs  cloud.rs  cluster.rs  completion.rs  config_cmd.rs  connect.rs  cost.rs  cron.rs  dashboard.rs  delete.rs  deploy.rs  dev.rs  diff.rs  docker.rs  env_cmd.rs  group.rs  health.rs  history.rs  incoming_hooks.rs  info.rs  init.rs  kill.rs  limits.rs  link.rs  list.rs  log_alerts.rs  login.rs  logs.rs  metrics.rs  migrate.rs  mod.rs  monit.rs  (+26 more)
crates/mhost-cli/tests/: cli_test.rs
crates/mhost-cloud/: Cargo.toml
crates/mhost-cloud/src/: ai_cloud.rs  backup.rs  config.rs  cost.rs  credentials.rs  drift.rs  export.rs  fleet.rs  install.rs  lib.rs  provider.rs  remote.rs  secrets.rs  ssh.rs
crates/mhost-cloud/src/adapter/: aws.rs  azure.rs  cloudflare.rs  digitalocean.rs  fly.rs  gcp.rs  mod.rs  netlify.rs  railway.rs  registry.rs  supabase.rs  vercel.rs
crates/mhost-cloud/src/providers/: aws.rs  azure.rs  digitalocean.rs  mod.rs  railway.rs
crates/mhost-config/: Cargo.toml
crates/mhost-config/src/: ecosystem.rs  env_expand.rs  lib.rs  validate.rs
crates/mhost-core/: Cargo.toml
crates/mhost-core/src/: error.rs  group.rs  health.rs  lib.rs  paths.rs  process.rs  protocol.rs
crates/mhost-daemon/: Cargo.toml
crates/mhost-daemon/src/: api_adapter.rs  cron_scheduler.rs  handler.rs  main.rs  memory_monitor.rs  remote.rs  state.rs  supervisor.rs  watcher.rs
crates/mhost-deploy/: Cargo.toml
crates/mhost-deploy/src/: engine.rs  git.rs  history.rs  hooks.rs  lib.rs  rollback.rs
crates/mhost-health/: Cargo.toml
crates/mhost-health/src/: http_probe.rs  lib.rs  runner.rs  script_probe.rs  tcp_probe.rs
crates/mhost-ipc/: Cargo.toml
crates/mhost-ipc/src/: client.rs  codec.rs  lib.rs  server.rs  transport.rs
crates/mhost-logs/: Cargo.toml
crates/mhost-logs/src/: capture.rs  indexer.rs  lib.rs  parser.rs  query.rs  reader.rs  retention.rs  ring.rs  writer.rs
crates/mhost-logs/src/sink/: elasticsearch.rs  gelf.rs  loki.rs  mod.rs  syslog.rs
crates/mhost-metrics/: Cargo.toml
crates/mhost-metrics/src/: alert.rs  collector.rs  lib.rs  prometheus.rs  remediation.rs  store.rs
crates/mhost-notify/: Cargo.toml
crates/mhost-notify/src/: channel.rs  dispatcher.rs  escalation.rs  event.rs  lib.rs  throttle.rs
crates/mhost-notify/src/channels/: discord.rs  email.rs  mod.rs  ntfy.rs  pagerduty.rs  slack.rs  teams.rs  telegram.rs  webhook.rs
crates/mhost-proxy/: Cargo.toml
crates/mhost-proxy/src/: balance.rs  lib.rs  router.rs  server.rs  sticky.rs  tls.rs  upstream.rs  websocket.rs
crates/mhost-tui/: Cargo.toml
crates/mhost-tui/src/: app.rs  input.rs  lib.rs
crates/mhost-tui/src/tabs/: logs.rs  metrics.rs  mod.rs  processes.rs  proxy.rs
docs/superpowers/plans/: 2026-04-04-api-layer.md  2026-04-04-cloud-native-phase1.md  2026-04-05-mega-features.md  2026-04-05-mhost-cloud-platform.md  2026-04-19-feature-brainstorm.md
docs/superpowers/specs/: 2026-04-04-api-layer-design.md  2026-04-04-cloud-native-design.md  2026-04-05-cloud-agent-design.md  2026-04-05-mhost-cloud-platform-design.md  2026-04-05-unified-cloud-experience.md
examples/: full-stack.toml  mhost-agent.js  mhost-brain.js  mhost-dashboard.js  mhost-telegram-notifier.js  mhost.toml
examples/bash-monitor/: monitor.sh
examples/crasher/: crash.sh
examples/cron-job/: cleanup.sh
examples/express-api/: server.js
examples/flaky-api/: server.js
examples/node-api/: server.js
examples/python-worker/: worker.py
examples/react-app/: server.js
examples/static-site/: index.html  serve.sh
github-action/: README.md
homebrew/: mhost.rb
npm-package/: install.js  package.json
scripts/: install.ps1  install.sh  release.sh  setup-github.sh
vscode-extension/: README.md  package.json
website/: docs.html  index.html  llms.txt  playground.html  robots.txt
website/github-action/: action.yml
website/vscode-extension/: extension.js
