[workspace]
resolver = "2"
members = [
    "crates/mhost-core",
    "crates/mhost-config",
    "crates/mhost-health",
    "crates/mhost-ipc",
    "crates/mhost-logs",
    "crates/mhost-daemon",
    "crates/mhost-cli",
    "crates/mhost-notify",
    "crates/mhost-metrics",
    "crates/mhost-proxy",
    "crates/mhost-deploy",
    "crates/mhost-tui",
    "crates/mhost-ai",
    "crates/mhost-cloud",
    "crates/mhost-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maher Al-Aqil"]
license = "MIT"
repository = "https://github.com/maheralaqil/mhost"
description = "Advanced process manager — PM2 replacement written in Rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cron = "0.12"
sysinfo = "0.32"
axum = { version = "0.7", features = ["tokio"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
http-body-util = "0.1"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
bytes = "1"
git2 = "0.19"
ratatui = "0.29"
crossterm = "0.28"
