[workspace]
resolver = "2"
members = [
    "crates/mhost-core",
    "crates/mhost-config",
    "crates/mhost-health",
    "crates/mhost-ipc",
    "crates/mhost-logs",
    "crates/mhost-daemon",
    "crates/mhost-cli",
    "crates/mhost-notify",
    "crates/mhost-metrics",
    "crates/mhost-proxy",
    "crates/mhost-deploy",
    "crates/mhost-tui",
    "crates/mhost-ai",
    "crates/mhost-cloud",
    "crates/mhost-bot",
    "crates/mhost-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maher Al-Aqil"]
license = "MIT"
homepage = "https://mhostai.com"
repository = "https://github.com/maqalaqil/mhost"
documentation = "https://mhostai.com/docs.html"
description = "PM2 alternative in Rust — AI-powered process manager with autonomous DevOps agent, self-healing brain, and cloud fleet management"
keywords = ["process-manager", "pm2-alternative", "devops", "ai", "supervisor"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cron = "0.12"
sysinfo = "0.32"
axum = { version = "0.7", features = ["tokio", "ws"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
http-body-util = "0.1"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
bytes = "1"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.20"
ratatui = "0.29"
crossterm = "0.28"
