[package]
name = "mhost-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for mhost process manager"

[[bin]]
name = "mhost"
path = "src/main.rs"

[dependencies]
mhost-core = { path = "../mhost-core" }
mhost-config = { path = "../mhost-config" }
mhost-ipc = { path = "../mhost-ipc" }
mhost-logs = { path = "../mhost-logs" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
colored = "3"
tabled = "0.17"
clap_complete = "4"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
