[package]
name = "mhost-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "mhost CLI — PM2 alternative in Rust with AI-powered DevOps agent. Single binary, autonomous, self-healing."
readme = "../../README.md"

[[bin]]
name = "mhost"
path = "src/main.rs"

[dependencies]
mhost-core = { path = "../mhost-core" }
mhost-config = { path = "../mhost-config" }
mhost-bot = { path = "../mhost-bot" }
mhost-ipc = { path = "../mhost-ipc" }
mhost-logs = { path = "../mhost-logs" }
mhost-tui = { path = "../mhost-tui" }
mhost-ai = { path = "../mhost-ai" }
mhost-cloud = { path = "../mhost-cloud" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
colored = "3"
argon2 = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
reqwest = { workspace = true }
tabled = "0.17"
clap_complete = "4"
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
