[package]
name = "mhost-deploy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Deploy engine with git operations, hooks, history, and rollback for mhost"

[dependencies]
mhost-core = { path = "../mhost-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
