[package]
name = "mhost-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IPC transport layer for mhost process manager"

[dependencies]
mhost-core = { path = "../mhost-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
