[package]
name = "mhost-metrics"
version.workspace = true
edition.workspace = true

[dependencies]
mhost-core = { path = "../mhost-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
axum = { workspace = true }
