[package]
name = "mhost-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reverse proxy with host routing, backend pools, and load balancing for mhost"

[dependencies]
mhost-core = { path = "../mhost-core" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
